--- a/stils.css
+++ b/stils.css
@@ -6,6 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    background-color: black;
 }
 
 .calculator {
@@ -23,7 +24,7 @@ body {
     text-align: right;
     padding: 10px;
     margin-bottom: 10px;
-    border: 2px solid #ccc;
+    border: 2px solid #f44336;
     border-radius: 5px;
 }
 
@@ -34,7 +35,7 @@ body {
 }
 
 .btn {
-    background-color: #f0f0f0;
+    background-color: grey;
     border: none;
     padding: 20px;
     font-size: 18px;
@@ -48,12 +49,13 @@ body {
 }
 
 #equals {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #00ff11;
+    color: black;
+    width: 100%;
 }
 
 #equals:hover {
-    background-color: #45a049;
+    background-color: green;
 }
 
 .history {
